crystal-facet-uml (1.39.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * A single filename-parameter allows to open files by drag-n-drop
  * while exporting, the status line states "Exporting..."

   -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 23 Jul 2022 16:00:00 +0100

crystal-facet-uml (1.39.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Json format can be opened and written back from gui
  * save button was renamed from commit, moved to top tool bar
  * while loading, the status line states "Loading..."

   -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 16 Jul 2022 16:00:00 +0100

crystal-facet-uml (1.38.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Nicer layout of grid while dragging and creating objects
  * A single click focuses and selects an element. A second click deselects it
  * json import speed up by factor 20 (1m37,071s -> 0m4,644s) by using
    one top-level transaction only
  * On Windows(TM), the black terminal window is hidden (via -mwindows)
  * The left-right shiftable panes keep the right side constant on resize

   -- Andreas Warnke <cfu@andreaswarnke.de>  Mon, 06 Jun 2022 19:00:00 +0100

crystal-facet-uml (1.37.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * the screen layout stays fix while creating features and relationships
  * New DB and Open DB are two separate buttons
  * on Windows(TM), the working directory is the installation root (again)

   -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 14 May 2022 15:00:00 +0100

crystal-facet-uml (1.36.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Workarounds for window switching in gtk 4.6.1 on Windows(TM) removed
  * The edit widgets auto-store only at focus left event also with gtk4

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 24 Apr 2022 11:00:00 +0100

crystal-facet-uml (1.36.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * During import, changed ids and classifier-names are reported on stdout