@@ -3403,7 +3403,7 @@
         "id": 108,
         "main_type": 121,
         "type": "Component",
-        "stereotype": "",
+        "stereotype": "main logic",
         "name": "Tactics Calculator",
         "description": [
                 "Calculate tactics based on given strategy and current situation model"
