@@ -2,7 +2,9 @@
 
 #include <assert.h>
 
-static inline const GdkPixbuf * pos_nav_tree_node_type_get_icon( pos_nav_tree_node_type_t this_, gui_resources_t *resources )
+static inline const GdkPixbuf * pos_nav_tree_node_type_get_icon( pos_nav_tree_node_type_t this_,
+                                                                 bool highlight,
+                                                                 gui_resources_t *resources )
 {
     assert( resources != NULL );
     const GdkPixbuf * result;
@@ -29,19 +31,28 @@ static inline const GdkPixbuf * pos_nav_tree_node_type_get_icon( pos_nav_tree_no
         case POS_NAV_TREE_NODE_TYPE_NEW_ROOT:
         {
             /* same icon as for POS_NAV_TREE_NODE_TYPE_NEW_SIBLING */
-            result = gui_resources_get_navigate_create_sibling( resources );
+            result
+                = highlight
+                ? gui_resources_get_navigate_create_sibling( resources )
+                : gui_resources_get_navigate_create_sibling_0( resources );
         }
         break;
 
         case POS_NAV_TREE_NODE_TYPE_NEW_SIBLING:
         {
-            result = gui_resources_get_navigate_create_sibling_0( resources );
+            result
+                = highlight
+                ? gui_resources_get_navigate_create_sibling( resources )
+                : gui_resources_get_navigate_create_sibling_0( resources );
         }
         break;
 
         case POS_NAV_TREE_NODE_TYPE_NEW_CHILD:
         {
-            result = gui_resources_get_navigate_create_child_0( resources );
+            result
+                = highlight
+                ? gui_resources_get_navigate_create_child( resources )
+                : gui_resources_get_navigate_create_child_0( resources );
         }
         break;
 
