@@ -3,8 +3,9 @@ crystal-facet-uml (1.39.1) UNRELEASED; urgency=medium
   [ Andreas Warnke ]
   * A single filename-parameter allows to open files by drag-n-drop
   * while exporting, the status line states "Exporting..."
+  * Create-diagram icons highlight at mouse-over
 
-   -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 23 Jul 2022 16:00:00 +0100
+   -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 21 Aug 2022 16:00:00 +0100
 
 crystal-facet-uml (1.39.0) UNRELEASED; urgency=medium
 
